python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: image-registry.openshift-image-registry.svc:5000/argocd/flask-user-api:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
