python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: argocd
spec:
  selector:
    app: user-api
  ports:
    - name: http
      port: 8080
      targetPort: 5000
  type: ClusterIP
