python/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: user-api
  namespace: argocd
spec:
  to:
    kind: Service
    name: user-api
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
